fixed horizontal scroll, added links in navigation, fixed window margin

--- a/style.css
+++ b/style.css
@@ -2,18 +2,20 @@
     margin: 0;
     border: 0;
     font-family: 'Neucha', cursive;
+    overflow-x: hidden;
 }
 .container {
     display: flex;
     flex-direction:row;
     flex-wrap: wrap;
+    
 
 }
 
 .main-header {
     width: 100vw;
-    height: 12vh;
-    border-bottom: 2px solid black;
+    /* height: 12vh; */
+    /* border-bottom: 2px solid black; */
     background-color: #E2EFDE;
     display: flex;
     flex-direction: row;
@@ -166,7 +168,7 @@ li{
     margin-left: 15%;
     margin-right: 5%;
     /* border: 1.5px solid rgb(12, 100, 49); */
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 .text-description h2 {
     
