--- a/styleCard.css
+++ b/styleCard.css
@@ -1,5 +1,9 @@
+*{
+    margin: 0;
+}
 html {
     font-family: 'Quattrocento', serif;
+   
 }
 
 .container {
@@ -10,8 +14,8 @@ html {
 
 .main-header {
     width: 100vw;
-    height: 12vh;
-    border-bottom: 2px solid black;
+    /* height: 12vh; */
+    /* border-bottom: 2px solid black; */
     background-color: #E2EFDE;
     display: flex;
     flex-direction: row;
